Add Railway configs, environment templates, and complete deployment guide

--- a/.env.example
+++ b/.env.example
@@ -1,46 +1,47 @@
-# Tree of Life System - Environment Configuration
+# TITAN Environment Configuration
 
-# GitHub Configuration
+# Application
+NODE_ENV=production
+PORT=3000
+
+# GitHub
 GITHUB_TOKEN=your_github_personal_access_token
 GITHUB_USERNAME=Garrettc123
-GITHUB_WEBHOOK_SECRET=your_webhook_secret
+GITHUB_WEBHOOK_SECRET=generate_random_secret_string
 
-# Linear Configuration
-LINEAR_API_KEY=your_linear_api_key
-LINEAR_TEAM_ID=0a42fa2d-5df2-45f5-a1c2-1dd78749fe93
-LINEAR_WEBHOOK_SECRET=your_linear_webhook_secret
-
-# Notion Configuration
-NOTION_API_KEY=your_notion_integration_token
-NOTION_DATABASE_ID=your_master_database_id
-NOTION_WORKSPACE_ID=your_workspace_id
-
-# Perplexity Configuration
-PERPLEXITY_API_KEY=your_perplexity_api_key
-PERPLEXITY_MODEL=sonar-pro
-
-# AI Engine Configuration
-OPENAI_API_KEY=your_openai_api_key
+# OpenAI (for AI features)
+OPENAI_API_KEY=sk-proj-your-api-key
 OPENAI_MODEL=gpt-4
 
-# Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/tree_of_life
-MONGO_URL=mongodb://localhost:27017/tree_of_life
-REDIS_URL=redis://localhost:6379
+# Linear
+LINEAR_API_KEY=lin_api_your_key
+LINEAR_TEAM_ID=your_team_id
 
-# Application Configuration
-NODE_ENV=development
-PORT=3000
-LOG_LEVEL=info
+# Notion
+NOTION_API_KEY=secret_your_key
+NOTION_WORKSPACE_ID=your_workspace_id
 
-# Security
-JWT_SECRET=your_jwt_secret_key
-ENCRYPTION_KEY=your_encryption_key
+# Revenue/Stripe (optional)
+STRIPE_SECRET_KEY=sk_live_your_key
+STRIPE_PUBLISHABLE_KEY=pk_live_your_key
+STRIPE_WEBHOOK_SECRET=whsec_your_secret
 
-# Monitoring
+# Database (optional)
+DATABASE_URL=postgresql://user:pass@host:5432/db
+REDIS_URL=redis://host:6379
+
+# Railway
+RAILWAY_STATIC_URL=https://your-app.railway.app
+RAILWAY_ENVIRONMENT=production
+
+# Monitoring (optional)
 SENTRY_DSN=your_sentry_dsn
+LOGTAIL_SOURCE_TOKEN=your_logtail_token
 
-# Feature Flags
-ENABLE_AUTO_MARKETING=true
-ENABLE_SELF_HEALING=true
-ENABLE_PREDICTIVE_INTEL=true
+# Email (optional)
+SENDGRID_API_KEY=your_sendgrid_key
+EMAIL_FROM=titan@yourdomain.com
+
+# Analytics (optional)
+GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
+MIXPANEL_TOKEN=your_mixpanel_token
