--- a/package.json
+++ b/package.json
@@ -1,54 +1,68 @@
 {
-  "name": "tree-of-life-system",
-  "version": "1.0.0",
-  "description": "Multiplex AI Business Platform - Integrated ecosystem for unprecedented automation",
-  "main": "index.js",
+  "name": "titan-tree-of-life",
+  "version": "3.0.0",
+  "description": "TITAN: Tree of Life Total Autonomous Intelligence Network - Complete autonomous AI business platform",
+  "main": "orchestrator/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "setup": "node scripts/setup.js",
+    "start": "node orchestrator/index.js",
+    "dev": "nodemon orchestrator/index.js",
+    "activate": "node scripts/titan-activate.js",
+    "setup-webhooks": "node scripts/setup-webhooks.js",
+    "monitor": "node monitoring/health-check.js",
     "test": "jest",
-    "lint": "eslint src/",
-    "build": "npm run build:root && npm run build:trunk && npm run build:branch",
-    "build:root": "node scripts/build-root-systems.js",
-    "build:trunk": "node scripts/build-trunk-systems.js",
-    "build:branch": "node scripts/build-branch-systems.js",
-    "deploy": "npm run build && node scripts/deploy.js",
-    "monitor": "node scripts/monitor-systems.js"
+    "lint": "eslint .",
+    "deploy": "railway up"
   },
   "keywords": [
-    "ai",
     "automation",
+    "ai",
     "github",
     "linear",
     "notion",
-    "perplexity",
-    "integration",
-    "business-intelligence"
+    "revenue",
+    "saas",
+    "autonomous",
+    "gpt4",
+    "openai"
   ],
-  "author": "Garrett Wayne Carrol",
-  "license": "PROPRIETARY",
+  "author": "Garrett Wayne",
+  "license": "MIT",
   "dependencies": {
-    "@linear/sdk": "^27.0.0",
-    "@notionhq/client": "^2.2.14",
-    "@octokit/rest": "^20.0.2",
+    "express": "^4.18.2",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "pg": "^8.11.3",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "compression": "^1.7.4",
+    "@octokit/rest": "^20.0.2",
+    "@linear/sdk": "^12.0.0",
+    "@notionhq/client": "^2.2.13",
+    "openai": "^4.20.0",
+    "stripe": "^14.5.0",
+    "joi": "^17.11.0",
+    "winston": "^3.11.0",
+    "bull": "^4.11.5",
     "redis": "^4.6.11",
-    "openai": "^4.20.1",
-    "bullmq": "^5.0.0",
-    "winston": "^3.11.0"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "eslint": "^8.55.0",
+    "nodemon": "^3.0.2",
+    "eslint": "^8.54.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
+    "chalk": "^4.1.2",
+    "readline": "^1.3.0"
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Garrettc123/tree-of-life-system.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Garrettc123/tree-of-life-system/issues"
+  },
+  "homepage": "https://github.com/Garrettc123/tree-of-life-system#readme"
 }
