feat: Add Treasury, QuantumResistant contracts and Hardhat setup
- Treasury.sol: Multi-sig treasury with budget allocation
- QuantumResistant.sol: Post-quantum signature verification
- Hardhat configuration with test networks
- Comprehensive deployment scripts
- Unit test framework setup

--- a/blockchain/.env.example
+++ b/blockchain/.env.example
@@ -1,14 +1,15 @@
-# Private key for deployment (DO NOT COMMIT YOUR ACTUAL PRIVATE KEY)
+# Private key for deployment (DO NOT commit actual private key)
 PRIVATE_KEY=your_private_key_here
 
-# Infura API key for network connections
-INFURA_KEY=your_infura_key_here
+# API Keys
+INFURA_API_KEY=your_infura_api_key
+ALCHEMY_API_KEY=your_alchemy_api_key
+ETHERSCAN_API_KEY=your_etherscan_api_key
+POLYGONSCAN_API_KEY=your_polygonscan_api_key
+COINMARKETCAP_API_KEY=your_coinmarketcap_api_key
 
-# Etherscan API key for contract verification
-ETHERSCAN_API_KEY=your_etherscan_key_here
-
-# CoinMarketCap API key for gas reporting
-COINMARKETCAP_API_KEY=your_coinmarketcap_key_here
-
-# Report gas usage
+# Gas reporting
 REPORT_GAS=false
+
+# Network selection
+NETWORK=sepolia
