--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -1,52 +1,46 @@
 {
-  "name": "nwu-protocol-blockchain",
+  "name": "nwu-protocol-contracts",
   "version": "1.0.0",
-  "description": "NWU Protocol Tree of Life System - Blockchain Layer",
+  "description": "Smart contracts for NWU Protocol - Tree of Life System",
   "main": "index.js",
   "scripts": {
-    "compile": "hardhat compile",
     "test": "hardhat test",
-    "coverage": "hardhat coverage",
-    "deploy:localhost": "hardhat run scripts/deploy.js --network localhost",
+    "test:coverage": "hardhat coverage",
+    "test:gas": "REPORT_GAS=true hardhat test",
+    "compile": "hardhat compile",
+    "deploy:local": "hardhat run scripts/deploy.js --network localhost",
     "deploy:sepolia": "hardhat run scripts/deploy.js --network sepolia",
-    "deploy:mainnet": "hardhat run scripts/deploy.js --network mainnet",
-    "deploy:polygon": "hardhat run scripts/deploy.js --network polygon",
+    "deploy:mumbai": "hardhat run scripts/deploy.js --network mumbai",
+    "verify:sepolia": "hardhat verify --network sepolia",
+    "verify:mumbai": "hardhat verify --network mumbai",
     "node": "hardhat node",
     "clean": "hardhat clean",
-    "format": "prettier --write 'contracts/**/*.sol' 'test/**/*.js' 'scripts/**/*.js'",
-    "lint": "solhint 'contracts/**/*.sol'"
+    "flatten": "hardhat flatten"
   },
   "keywords": [
     "blockchain",
     "ethereum",
-    "solidity",
-    "nwu-protocol",
-    "tree-of-life"
+    "smart-contracts",
+    "nwu",
+    "dao",
+    "governance"
   ],
   "author": "NWU Protocol Team",
   "license": "MIT",
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
-    "@openzeppelin/hardhat-upgrades": "^3.0.0",
-    "@typechain/ethers-v6": "^0.5.0",
-    "@typechain/hardhat": "^9.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@openzeppelin/hardhat-upgrades": "^2.4.3",
     "chai": "^4.3.10",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
-    "hardhat": "^2.19.0",
+    "hardhat": "^2.19.2",
     "hardhat-gas-reporter": "^1.0.9",
-    "prettier": "^3.1.0",
-    "prettier-plugin-solidity": "^1.2.0",
-    "solhint": "^4.0.0",
-    "solidity-coverage": "^0.8.5",
-    "typechain": "^8.3.0"
+    "solidity-coverage": "^0.8.5"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.0",
-    "@openzeppelin/contracts-upgradeable": "^5.0.0"
+    "@openzeppelin/contracts": "^5.0.1",
+    "@openzeppelin/contracts-upgradeable": "^5.0.1"
   }
 }
