--- a/trunk/verification-engine/package.json
+++ b/trunk/verification-engine/package.json
@@ -1,35 +1,20 @@
 {
-  "name": "@nwu-protocol/verification-engine",
+  "name": "verification-engine",
   "version": "1.0.0",
-  "description": "NWU Protocol Verification Engine - TRUNK Layer",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "Orchestrates multi-verifier contribution validation",
+  "main": "src/index.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn src/index.ts",
-    "test": "jest",
-    "lint": "eslint src --ext .ts",
-    "format": "prettier --write 'src/**/*.ts'"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
-  "keywords": [
-    "nwu-protocol",
-    "verification",
-    "blockchain"
-  ],
-  "author": "NWU Protocol Team",
-  "license": "MIT",
   "dependencies": {
+    "express": "^4.18.2",
     "ethers": "^6.9.0",
-    "events": "^3.3.0"
+    "ioredis": "^5.3.2",
+    "pg": "^8.11.3",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.54.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.1.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.0"
+    "nodemon": "^3.0.2"
   }
 }
