Add auto-complete code pipeline with AI repair

--- a/.env.example
+++ b/.env.example
@@ -1,47 +1,5 @@
-# TITAN Environment Configuration
-
-# Application
-NODE_ENV=production
-PORT=3000
-
-# GitHub
-GITHUB_TOKEN=your_github_personal_access_token
-GITHUB_USERNAME=Garrettc123
-GITHUB_WEBHOOK_SECRET=generate_random_secret_string
-
-# OpenAI (for AI features)
-OPENAI_API_KEY=sk-proj-your-api-key
-OPENAI_MODEL=gpt-4
-
-# Linear
-LINEAR_API_KEY=lin_api_your_key
-LINEAR_TEAM_ID=your_team_id
-
-# Notion
-NOTION_API_KEY=secret_your_key
-NOTION_WORKSPACE_ID=your_workspace_id
-
-# Revenue/Stripe (optional)
-STRIPE_SECRET_KEY=sk_live_your_key
-STRIPE_PUBLISHABLE_KEY=pk_live_your_key
-STRIPE_WEBHOOK_SECRET=whsec_your_secret
-
-# Database (optional)
-DATABASE_URL=postgresql://user:pass@host:5432/db
-REDIS_URL=redis://host:6379
-
-# Railway
-RAILWAY_STATIC_URL=https://your-app.railway.app
-RAILWAY_ENVIRONMENT=production
-
-# Monitoring (optional)
-SENTRY_DSN=your_sentry_dsn
-LOGTAIL_SOURCE_TOKEN=your_logtail_token
-
-# Email (optional)
-SENDGRID_API_KEY=your_sendgrid_key
-EMAIL_FROM=titan@yourdomain.com
-
-# Analytics (optional)
-GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
-MIXPANEL_TOKEN=your_mixpanel_token
+# Configuration
+DATABASE_URL=postgresql://localhost/db
+MONGODB_URI=mongodb://localhost:27017
+REDIS_URL=redis://localhost:6379
+API_PORT=3000
