--- a/package.json
+++ b/package.json
@@ -1,68 +1,28 @@
 {
-  "name": "titan-tree-of-life",
-  "version": "3.0.0",
-  "description": "TITAN: Tree of Life Total Autonomous Intelligence Network - Complete autonomous AI business platform",
-  "main": "orchestrator/index.js",
+  "name": "tree-of-life-system",
+  "version": "1.0.0",
+  "description": "Tree of Life System - Integration platform",
+  "main": "server.js",
   "scripts": {
-    "start": "node orchestrator/index.js",
-    "dev": "nodemon orchestrator/index.js",
-    "activate": "node scripts/titan-activate.js",
-    "setup-webhooks": "node scripts/setup-webhooks.js",
-    "monitor": "node monitoring/health-check.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest",
-    "lint": "eslint .",
-    "deploy": "railway up"
+    "lint": "eslint ."
   },
-  "keywords": [
-    "automation",
-    "ai",
-    "github",
-    "linear",
-    "notion",
-    "revenue",
-    "saas",
-    "autonomous",
-    "gpt4",
-    "openai"
-  ],
-  "author": "Garrett Wayne",
+  "keywords": ["tree", "life", "system", "integration"],
+  "author": "Garrett Carrol",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "@octokit/rest": "^20.0.2",
-    "@linear/sdk": "^12.0.0",
-    "@notionhq/client": "^2.2.13",
-    "openai": "^4.20.0",
-    "stripe": "^14.5.0",
-    "joi": "^17.11.0",
-    "winston": "^3.11.0",
-    "bull": "^4.11.5",
-    "redis": "^4.6.11",
-    "pg": "^8.11.3"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
-    "eslint": "^8.54.0",
     "jest": "^29.7.0",
-    "chalk": "^4.1.2",
-    "readline": "^1.3.0"
+    "eslint": "^8.55.0"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Garrettc123/tree-of-life-system.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Garrettc123/tree-of-life-system/issues"
-  },
-  "homepage": "https://github.com/Garrettc123/tree-of-life-system#readme"
+    "node": ">=18.0.0"
+  }
 }
